# harness-scaffold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: advanced-usage.md  quick-start.md  use-cases.md
src/harness/: __init__.py
src/harness/adapters/: __init__.py  base.py  claude.py  codex.py
src/harness/cli/: __init__.py  doctor_cmd.py  init_cmd.py  state_cmd.py
src/harness/core/: config.py  content_quality.py  i18n.py  layout.py  registry.py  scaffold.py  state.py
src/harness/templates/adapters/claude/: CLAUDE.en.md.j2  CLAUDE.zh.md.j2  command.en.md.j2  command.md.j2  command.zh.md.j2
src/harness/templates/adapters/codex/: command.en.md.j2  command.md.j2  command.zh.md.j2
src/harness/templates/harness/: config.toml.j2  registry.en.toml.j2  registry.zh.toml.j2
src/harness/templates/harness/evals/: README.en.md.j2  README.zh.md.j2
src/harness/templates/harness/playbooks/: 00-constitution.md.j2  00-constitution.zh.md.j2  10-baseline.en.md.j2  10-baseline.md.j2  10-baseline.zh.md.j2  12-next.en.md.j2  12-next.md.j2  12-next.zh.md.j2  30-propose.md.j2  30-propose.zh.md.j2  31-clarify.md.j2  31-clarify.zh.md.j2  32-design.md.j2  32-design.zh.md.j2  33-plan.md.j2  33-plan.zh.md.j2  34-tasks.en.md.j2  34-tasks.md.j2  34-tasks.zh.md.j2  35-analyze.md.j2  35-analyze.zh.md.j2  40-implement.en.md.j2  40-implement.md.j2  40-implement.zh.md.j2  41-verify.en.md.j2  41-verify.zh.md.j2  50-review.md.j2  50-review.zh.md.j2  51-archive.en.md.j2  51-archive.md.j2  51-archive.zh.md.j2  90-doctor.en.md.j2  90-doctor.zh.md.j2
src/harness/templates/harness/principle-packs/: 12-factor-agents.md.j2  generic.md.j2  generic.zh.md.j2
src/harness/templates/harness/scripts/sh/: verify.sh.j2  verify.zh.sh.j2
src/harness/templates/harness/scripts/sh/lib/: common.sh.j2  common.zh.sh.j2
src/harness/templates/harness/templates/: feature_list.schema.json.j2
src/harness/templates/shared/: AGENTS.en.md.j2  AGENTS.md.j2  AGENTS.zh.md.j2  gitignore.j2  gitignore.zh.j2  gitlab-ci.yml.j2  gitlab-ci.zh.yml.j2  init.ps1.j2  init.sh.j2  pre-commit-config.en.yaml.j2  pre-commit-config.zh.yaml.j2
tests/: conftest.py
tests/cli/: test_cli.py  test_state_cmd.py
tests/core/: test_config.py  test_content_quality.py  test_layout.py  test_registry.py  test_scaffold.py  test_state.py
tests/templates/: test_localization_parity.py  test_seed_contract.py
